tests/cases/compiler-development/artifact/errors/diagnostic-module-glob-duplicate.diagnostic
diagnostic error code=M0001 family=module message="duplicate use alias 'value'" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/modules/errors/module-glob-duplicate.ari" display="tests/cases/modules/errors/module-glob-duplicate.ari" bytes=168
  Label index=0 role=primary source_id=0 source="tests/cases/modules/errors/module-glob-duplicate.ari" line=14 column=5 end_line=14 end_column=6 byte_start=123 byte_end=124 message=""
  Snippet label=0 text="  --> tests/cases/modules/errors/module-glob-duplicate.ari:14:5\n    |\n 14 | use B::*\n    |     ^"
  Label index=1 role=secondary source_id=0 source="tests/cases/modules/errors/module-glob-duplicate.ari" line=13 column=5 end_line=13 end_column=6 byte_start=114 byte_end=115 message="previous use alias 'value' resolves to A::value"
  Snippet label=1 text="  --> tests/cases/modules/errors/module-glob-duplicate.ari:13:5\n    |\n 13 | use A::*\n    |     ^"
  Note index=0 location=none message="use aliases share one unqualified name in each module scope"
  Help index=0 location=none message="import one item explicitly with an alias or refer to B::value by its qualified path"
